--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 70vh;
   height: 100%;
+  position: relative;
 }
 
 .items {
@@ -37,7 +38,7 @@ body {
   grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: 200px;
   overflow-y: auto;
-  gap:50px 25px;
+  gap: 50px 25px;
   overflow-x: hidden;
   place-items: center;
   align-items: center;
@@ -292,6 +293,27 @@ body {
 ol,
 ul {
   list-style: none;
+}
+
+.loading {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: black;
+  z-index: 25;
+  color: white;
+  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inset: 0;
+  font-size: 2rem;
+  animation: fadeOut 1s ease;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
 @media screen and (min-width: 768px) {
