changes mobile first view

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: 30vw 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   height: 100%;
   position: relative;
@@ -35,13 +35,12 @@ body {
 
 .items {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 200px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: 50vh;
   overflow-y: auto;
-  gap: 50px 25px;
-  overflow-x: hidden;
   place-items: center;
   align-items: center;
+  width: 100%;
 }
 
 .item {
@@ -52,11 +51,10 @@ body {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 75px 1fr 50px;
   height: auto;
-  width: 180px;
+  width: 100%;
   background-color: var(--primary-color);
   animation: zoomIn ease-in-out 1.5s;
   z-index: 25;
-  margin-top: 50px;
   position: relative;
   border-inline: 2px solid var(--grey-color);
 }
@@ -97,15 +95,15 @@ body {
 }
 
 .item .item__add {
-  background-color: rgb(0, 172, 0);
+  background-color: var(--secondary-color);
   border: 0;
   cursor: pointer;
   margin: 0;
-  padding: 5px;
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: white;
   font-weight: 500;
   border-top-left-radius: 15px;
+  border-bottom-right-radius: 5px;
   font-family: 'Crimson Text', serif;
   transition: 1s ease all;
 }
@@ -123,7 +121,7 @@ body {
   display: grid;
   place-items: center;
   grid-template-columns: 1fr;
-  grid-template-rows: 50% 1fr;
+  grid-template-rows: 60% 1fr;
   box-shadow: 5px 5px 5px var(--box-shadow-color);
   background-color: rgb(180, 190, 204);
 }
@@ -137,17 +135,15 @@ body {
   box-shadow: 2px 2px 5px var(--box-shadow-color);
 }
 
-.cart #search:placeholder-shown{
+.cart #search:placeholder-shown {
   text-align: center;
 }
 
 .cart article {
-  padding: 10px;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .cart article:nth-of-type(2) {
@@ -177,7 +173,7 @@ body {
   box-shadow: 0 5px 5px var(--box-shadow-color);
   color: rgb(255, 255, 255);
   text-shadow: 0 2px 2px black;
-  width: 300px;
+  width: 100%;
   height: 100px;
   margin: 25px;
 }
@@ -189,7 +185,7 @@ body {
   border: 0;
   border-radius: 15px;
   box-shadow: 0 5px 5px var(--box-shadow-color);
-  width: 200px;
+  width: 100%;
   height: 50px;
   margin: 25px;
   background-color: rgb(138, 47, 47);
@@ -215,7 +211,7 @@ body {
   color: black;
   display: grid;
   font-family: 'Source Sans Pro', sans-serif;
-  grid: 1fr / 1fr 1fr;
+  grid: 50px 1fr / 1fr;
   place-items: center;
   background-color: var(--grey-color);
   border-radius: 25px;
@@ -258,12 +254,13 @@ body {
 }
 
 .cart .price {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid: 1fr 1fr / 1fr 1fr;
   align-items: center;
-  background-color: green;
+  background-color: var(--grey-color);
   padding: 15px;
-  width: 350px;
+  width: 100%;
+  height: 40%;
   color: white;
   border-radius: 5px;
   border-bottom: 5px solid var(--secondary-color);
@@ -283,30 +280,17 @@ body {
 
 .cart .price span {
   background: var(--secondary-color);
-  padding: 10px 5px;
+  padding: 5px;
+}
+
+.cart .price > * {
+  width: 100%;
 }
 
 .cart .price .total-price {
-  margin-left: 10px;
   font-weight: 800;
   text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
   text-decoration: double;
-}
-
-.cart__title,
-.price,
-.cart button,
-.cart__item,
-.item {
-  transition: box-shadow 1s ease, transform 0.5s ease-in-out;
-}
-.cart__title:hover,
-.price:hover,
-.cart button:hover,
-.cart__item:hover,
-.item:hover {
-  box-shadow: 0 10px 5px rgba(0, 0, 0, 0.5);
-  transform: scale(1.1);
 }
 
 ol,
@@ -336,4 +320,57 @@ ul {
 }
 
 @media screen and (min-width: 768px) {
+  .container {
+    grid-template-columns: 30vw 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .items {
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 1fr;
+    gap: 0 2px;
+    place-items: unset;
+    align-items: flex-start;
+  }
+
+  .item {
+    border-radius: 10px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 75px 1fr 50px;
+    height: auto;
+    background-color: var(--primary-color);
+    animation: zoomIn ease-in-out 1.5s;
+    z-index: 25;
+    margin-top: 50px;
+    position: relative;
+    border-inline: 2px solid var(--grey-color);
+  }
+
+  .cart article {
+    padding: 10px;
+    justify-content: center;
+  }
+
+  .cart .cart__items .cart__item {
+    grid: 1fr / 1fr 1fr;
+  }
+
+  .cart__title,
+  .price,
+  .cart button,
+  .cart__item,
+  .item {
+    transition: box-shadow 1s ease, transform 0.5s ease-in-out;
+  }
+  .cart__title:hover,
+  .price:hover,
+  .cart button:hover,
+  .cart__item:hover,
+  .item:hover {
+    box-shadow: 0 10px 5px rgba(0, 0, 0, 0.5);
+    transform: scale(1.1);
+  }
 }
