--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
   display: grid;
   place-items: center;
   grid-template-columns: 1fr;
-  grid-template-rows: 60% 1fr;
+  grid-template-rows: 80% 1fr;
   box-shadow: 5px 5px 5px var(--box-shadow-color);
   background-color: rgb(180, 190, 204);
   position: relative;
@@ -162,7 +162,7 @@ body {
   overflow-y: auto;
 }
 
-.cart article:nth-of-type(1) > * {
+.cart article:nth-of-type(1) > span {
   border-left: 5px solid black;
   align-self: center;
 }
@@ -181,7 +181,7 @@ body {
   color: rgb(238, 238, 238);
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
   width: 100%;
-  height: 150px;
+  height: 100px;
   margin: 5px;
   position: relative;
   line-height: 0.9rem;
@@ -221,6 +221,7 @@ body {
   margin: 25px;
   background-color: rgb(138, 47, 47);
   color: white;
+  align-self: center;
   -webkit-animation: lightSpeedInLeft 2.5s ease-in-out;
   -moz-animation: lightSpeedInLeft 2.5s ease-in-out;
   -ms-animation: lightSpeedInLeft 2.5s ease-in-out;
@@ -305,7 +306,7 @@ body {
   background-color: var(--grey-color);
   padding: 15px;
   width: 100%;
-  height: 40%;
+  height: 100%;
   color: white;
   border-radius: 5px;
   border-bottom: 5px solid var(--secondary-color);
