--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   --light-color: #c4f7fb;
   --grey-color: #59717a;
   --box-shadow-color: rgba(65, 59, 122, 0.5);
+  --index: 0;
 }
 
 * {
@@ -55,11 +56,11 @@ body {
   height: 300px;
   width: 100%;
   background-color: var(--primary-color);
-  animation: zoomIn ease-in-out 1.5s;
   z-index: 25;
   position: relative;
   border-inline: 2px solid var(--grey-color);
   padding: 5px;
+  opacity: 0;
 }
 
 .item > * {
@@ -131,7 +132,7 @@ body {
   display: grid;
   place-items: center;
   grid-template-columns: 1fr;
-  grid-template-rows: 60% 1fr;
+  grid-template-rows: 30% 1fr 20%;
   box-shadow: 5px 5px 5px var(--box-shadow-color);
   background-color: rgb(180, 190, 204);
   position: relative;
@@ -158,11 +159,7 @@ body {
   overflow: hidden;
 }
 
-.cart article:nth-of-type(2) {
-  overflow-y: auto;
-}
-
-.cart article:nth-of-type(1) > * {
+.cart article:nth-of-type(1) > span {
   border-left: 5px solid black;
   align-self: center;
 }
@@ -181,7 +178,7 @@ body {
   color: rgb(238, 238, 238);
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
   width: 100%;
-  height: 150px;
+  height: 100px;
   margin: 5px;
   position: relative;
   line-height: 0.9rem;
@@ -221,6 +218,7 @@ body {
   margin: 25px;
   background-color: rgb(138, 47, 47);
   color: white;
+  align-self: center;
   -webkit-animation: lightSpeedInLeft 2.5s ease-in-out;
   -moz-animation: lightSpeedInLeft 2.5s ease-in-out;
   -ms-animation: lightSpeedInLeft 2.5s ease-in-out;
@@ -229,12 +227,14 @@ body {
 
 .cart .cart__items {
   overflow-y: auto;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+  height: 100%;
 }
 
 .cart .cart__items .cart__item {
@@ -249,9 +249,12 @@ body {
   margin-block: 10px;
   outline: #15173b 4px double;
   outline-offset: 2px;
-  animation: fadeInLeft; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 5s;
+  animation: fadeInLeft 2.5s ease; 
   position: relative;
+}
+
+.cart-fade {
+  animation: bounceOut ease-in-out 2s !important; /* referring directly to the animation's @keyframe declaration */
 }
 
 .cart .cart__items .cart__item .cart__id {
@@ -305,7 +308,7 @@ body {
   background-color: var(--grey-color);
   padding: 15px;
   width: 100%;
-  height: 40%;
+  height: 100%;
   color: white;
   border-radius: 5px;
   border-bottom: 5px solid var(--secondary-color);
