--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   --light-color: #c4f7fb;
   --grey-color: #59717a;
   --box-shadow-color: rgba(65, 59, 122, 0.5);
+  --index: 0;
 }
 
 * {
@@ -55,11 +56,11 @@ body {
   height: 300px;
   width: 100%;
   background-color: var(--primary-color);
-  animation: zoomIn ease-in-out 1.5s;
   z-index: 25;
   position: relative;
   border-inline: 2px solid var(--grey-color);
   padding: 5px;
+  opacity: 0;
 }
 
 .item > * {
@@ -131,7 +132,7 @@ body {
   display: grid;
   place-items: center;
   grid-template-columns: 1fr;
-  grid-template-rows: 80% 1fr;
+  grid-template-rows: 30% 1fr 20%;
   box-shadow: 5px 5px 5px var(--box-shadow-color);
   background-color: rgb(180, 190, 204);
   position: relative;
@@ -156,10 +157,6 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-}
-
-.cart article:nth-of-type(2) {
-  overflow-y: auto;
 }
 
 .cart article:nth-of-type(1) > span {
@@ -230,12 +227,14 @@ body {
 
 .cart .cart__items {
   overflow-y: auto;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+  height: 100%;
 }
 
 .cart .cart__items .cart__item {
@@ -250,9 +249,12 @@ body {
   margin-block: 10px;
   outline: #15173b 4px double;
   outline-offset: 2px;
-  animation: fadeInLeft; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 5s;
+  animation: fadeInLeft 2.5s ease; 
   position: relative;
+}
+
+.cart-fade {
+  animation: bounceOut ease-in-out 2s !important; /* referring directly to the animation's @keyframe declaration */
 }
 
 .cart .cart__items .cart__item .cart__id {
